# Transformer

./: .gitignore  CMakeLists.txt  Functions.hpp  README.md  activations.hpp  architecture.hpp  autograd.hpp  dataframe.hpp  effective_cfg_tmp.json  layers.hpp  loss_functions.hpp  merges.txt  ops_autograd.hpp  preprocessing.hpp  run_cfg_tmp.json  run_tmp.json  scalers.hpp  tensor-PC.hpp  tensor.cpp  tensor.hpp  tensor_minimal.hpp  toy_llm.cpp
tests/: simple_test.cpp  toy_llm_test.cpp
